--- a/Settings/example_settings_ME.json
+++ b/Settings/example_settings_ME.json
@@ -1,6 +1,7 @@
 {
 	"pol_order": 3,
 	"grid_level": 3,
+    "mem_saving": 0,
 	"quadrature_type": ["gauss"],
 	"input_distribution": ["arbitrary", "arbitrary", "gaussian"],
 	"grid_type": "sparse",
